--- a/dedicaMNS/res/layout/general_detail_day.xml
+++ b/dedicaMNS/res/layout/general_detail_day.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:gravity="center_horizontal"
+            android:textIsSelectable="true"
             android:textSize="28sp" >
         </TextView>
 
@@ -38,6 +39,7 @@
             android:layout_marginRight="2dp"
             android:layout_toRightOf="@+id/gTotalHoursLabel"
             android:gravity="right"
+            android:textIsSelectable="true"
             android:textSize="16sp" >
         </TextView>
     </RelativeLayout>
@@ -46,8 +48,8 @@
         android:id="@+id/generalListHeaders"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/generalDayInfo"
+        android:layout_marginTop="10dp"
         android:gravity="fill_horizontal" >
 
         <TextView
