--- a/dedicaMNS/res/layout/month_report.xml
+++ b/dedicaMNS/res/layout/month_report.xml
@@ -19,6 +19,7 @@
             android:gravity="center_horizontal"
             android:paddingLeft="9sp"
             android:paddingRight="9sp"
+            android:textIsSelectable="true"
             android:textSize="22sp" />
 
         <TextView
@@ -31,6 +32,7 @@
             android:gravity="left"
             android:paddingLeft="9sp"
             android:paddingRight="9sp"
+            android:textIsSelectable="true"
             android:textSize="16sp" />
 
         <TextView
@@ -43,6 +45,7 @@
             android:gravity="left"
             android:paddingLeft="9sp"
             android:paddingRight="9sp"
+            android:textIsSelectable="true"
             android:textSize="16sp" />
     </RelativeLayout>
 
