Arreglada incidencia #12 "No se puede acceder a la imputación de horas diaria"

--- a/dedicaMNS/res/layout/general_detail_day_row.xml
+++ b/dedicaMNS/res/layout/general_detail_day_row.xml
@@ -10,7 +10,7 @@
         android:gravity="left|center_vertical"
         android:paddingLeft="5sp"
         android:paddingTop="3sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="16sp" />
 
     <TextView
@@ -21,7 +21,7 @@
         android:gravity="right|center_vertical"
         android:paddingRight="5sp"
         android:paddingTop="3sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="16sp" >
     </TextView>
 
@@ -33,7 +33,7 @@
         android:gravity="right|center_vertical"
         android:paddingRight="5sp"
         android:paddingTop="3sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="16sp" >
     </TextView>
 
@@ -45,7 +45,7 @@
         android:gravity="right|center_vertical"
         android:paddingRight="5sp"
         android:paddingTop="3sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="16sp" >
     </TextView>
 
