--- a/dedicaMNS/res/layout/month_view_row.xml
+++ b/dedicaMNS/res/layout/month_view_row.xml
@@ -10,7 +10,7 @@
         android:background="@drawable/back"
         android:gravity="right"
         android:padding="5sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="20sp" >
     </TextView>
 
@@ -22,7 +22,7 @@
         android:gravity="bottom"
         android:paddingLeft="6sp"
         android:paddingTop="9sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="14sp" >
     </TextView>
 
@@ -33,7 +33,7 @@
         android:layout_toLeftOf="@+id/hours"
         android:gravity="center_vertical|right"
         android:paddingTop="9sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="16sp" >
     </TextView>
 
@@ -44,7 +44,7 @@
         android:layout_alignParentRight="true"
         android:gravity="right"
         android:padding="5sp"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="20sp" />
 
 </RelativeLayout>
