--- a/dedicaMNS/res/drawable/selector_holiday.xml
+++ b/dedicaMNS/res/drawable/selector_holiday.xml
@@ -3,5 +3,6 @@
     <item android:state_focused="true" android:state_pressed="true" android:drawable="@color/royalBlue" /> <!-- focused and pressed-->
     <item android:state_focused="true" android:drawable="@color/royalBlue" /> <!-- focused -->    
     <item android:state_pressed="true" android:drawable="@color/royalBlue" /> <!-- pressed -->
+    <item android:state_selected="true" android:drawable="@color/royalBlue" /> <!-- selected -->
     <item android:drawable="@color/skyBlue" /> <!-- default  -->
 </selector>
